--- a/extrastyle/style.css
+++ b/extrastyle/style.css
@@ -3,6 +3,41 @@
     -webkit-transition: 0.3s;
     transition: 0.3s;
 }
+@media (min-width: 100px) {
+    .navbrand-img {
+      max-width: 100px !important;
+    }
+    .text-visible {
+        visibility: hidden !important;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .navbrand-img {
+      max-width: 40px !important;
+    }
+    .text-visible {
+        visibility: visible !important;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .navbrand-img {
+      max-width: 40px !important;
+    }
+    .text-visible {
+        visibility: visible !important;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .navbrand-img {
+      max-width: 40px !important;
+    }
+    .text-visible {
+        visibility: visible !important;
+    }
+  }
 .bg-darklight {
     background-color: #dedede;
 }
