--- a/extrastyle/style.css
+++ b/extrastyle/style.css
@@ -1,17 +1,17 @@
-.navbrand-hovered:hover {
-    margin-left: 5px !important;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-}
 .navbrand-img {
     max-width: 130px !important;
 }
 .navbrand-text {
     font-family: 'Courier New', Courier, monospace;
     font-size: 100px !important;
-    position: absolute !important;
+    position: relative !important;
     margin-top: 40px !important;
     display: none;
+}
+.navbrand-hovered:hover {
+    margin-left: 5px !important;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
 }
 /* NAVBAR */
 @media (min-width: 768px) {
@@ -21,7 +21,7 @@
     .navbrand-text {
         font-family: 'Courier New', Courier, monospace;
         font-size: 100px !important;
-        position: absolute !important;
+        position: relative !important;
         margin-top: 40px !important;
         display: none;
     }
@@ -33,8 +33,8 @@
     }
     .navbrand-text {
         font-family: 'Courier New', Courier, monospace;
-        font-size: 45px !important;
-        position: absolute !important;
+        font-size: 46px !important;
+        position: relative !important;
         margin-top: 0 !important;
         display: inline;
     }
@@ -46,8 +46,8 @@
     }
     .navbrand-text {
         font-family: 'Courier New', Courier, monospace;
-        font-size: 45px !important;
-        position: absolute !important;
+        font-size: 46px !important;
+        position: relative !important;
         margin-top: 0 !important;
         display: inline;
     }
@@ -60,4 +60,12 @@
 .nav-toggler-lg {
     font-size: 4.25rem !important;
     right: 5%;
+}
+.textCentered {
+    text-align: center !important;
+}
+
+.nav-item-hovered:hover {
+    background-color: #cdcdcd;
+    transition: 0.3s;
 }
