--- a/extrastyle/style.css
+++ b/extrastyle/style.css
@@ -16,6 +16,11 @@
     transition: 0.3s;
 }
 
+.navitem-p-hovered:hover {
+    padding-left: 30px !important;
+    transition: 0.3s;
+}
+
 .navlinkCollapsedtxtSize {
     font-size: 2.4rem !important;
 }
@@ -30,6 +35,9 @@
 
 .borderRight {
     border-right: none;
+}
+.navbarWidth {
+    width: auto;
 }
 
 /* NAVBAR */
@@ -69,6 +77,9 @@
     }
     .borderRight {
         border-right: 1px solid gray;
+    }
+    .navbarWidth {
+        width: 14em;
     }
 }
 
@@ -124,6 +135,7 @@
 .navbar-boxshadow {
     box-shadow: 0 1px 5px 0px #454545;
 }
+
 .dropdown-item:active {
-    background-color:  #bcbcbc;
+    background-color: #bcbcbc;
 }
